# star

./: .gitignore  README.md  init_db.py  pyproject.toml  script.sql
star/: .env  app.py  config.py  db.py  models.py  pages.py  routes.py
tests/: test_cli.py
