[tool.poetry]
name = "star"
version = "0.1.0"
description = ""
authors = ["felbfreire <felbfreire@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.26.0.post1"
uvicorn = "^0.21.0"
sqlalchemy = "^2.0.7"


[tool.poetry.group.dev.dependencies]
httpx = "^0.23.3"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
